Removed conflict style which caused layout issues in game section when minimized game view option was in effect.
git-svn-id: https://arcomage.net/svn/release@635 495dd495-0106-db11-81b0-001320b0e4cc

--- a/styles/games.css
+++ b/styles/games.css
@@ -50,7 +50,6 @@ p.discarded /* discarded card flag */
 div#game
 {
 	min-width: 1045px;
-	color: black;
 	padding-top: 1ex;
 	padding-bottom: 1ex;
 	-o-background-size: 100% 100%; /* only Opera supports background image resizing */
